#11 frontend for derivations

--- a/webapp/src/main/resources/messages_it.properties
+++ b/webapp/src/main/resources/messages_it.properties
@@ -1,4 +1,4 @@
-galloitailici.kb.title=Base di conoscenza del progetto Galloitialici
+galloitailici.kb.title=Base di conoscenza del progetto Galloitalici
 galloitailici.kb.sparql.title=Endpoint SPARQL per la base di conoscenza del progetto Galloitalici
 galloitailici.kb.sparql.querylabel=Inserisci la query SPARQL nel box sottostante
 galloitailici.kb.sparql.submitlabel=Invia
@@ -19,4 +19,10 @@ galloitalici.kb.lexica.selection.features.northern=tratti settentrionali
 galloitalici.kb.lexica.selection.features.southern=tratti meridionali
 galloitalici.kb.lexica.selection.sumbmit=Seleziona
 galloitalici.kb.lexica.selection.numentries=Trovati {0} elementi
+galloitalici.kb.derivation.title=Derive using Gallo-Sicilian Features
+galloitalici.kb.derivation.sumbmit=trova derivazioni
+galloitalici.kb.derivation.lemma=Lemma
+galloitalici.kb.derivation.etymon=Etymon
+galloitalici.kb.derivation.found=Derivations
+
 
