fixed some labels

--- a/webapp/src/main/resources/messages.properties
+++ b/webapp/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ galloitalici.kb.lexica.selection.sumbmit=Select
 galloitalici.kb.lexica.selection.numentries=Found {0} entries
 galloitalici.kb.derivation.title=Derivazioni attraverso i tratti Gallo-Siciliani
 galloitalici.kb.derivation.lemma=Lemma
-galloitalici.kb.derivation.etymon=Etimo
-galloitalici.kb.derivation.found=Derivazioni
+galloitalici.kb.derivation.etymon=Etymon
+galloitalici.kb.derivation.sumbmit="Find derivations"
+galloitalici.kb.derivation.found=Derivations
 
