--- a/webapp/src/main/resources/messages.properties
+++ b/webapp/src/main/resources/messages.properties
@@ -18,9 +18,9 @@ galloitalici.kb.lexica.selection.features.northern=with northern features
 galloitalici.kb.lexica.selection.features.southern=with southern features
 galloitalici.kb.lexica.selection.sumbmit=Select
 galloitalici.kb.lexica.selection.numentries=Found {0} entries
-galloitalici.kb.derivation.title=Derivazioni attraverso i tratti Gallo-Siciliani
+galloitalici.kb.derivation.title=Derive using Gallo-Sicilian Features
 galloitalici.kb.derivation.lemma=Lemma
 galloitalici.kb.derivation.etymon=Etymon
-galloitalici.kb.derivation.sumbmit="Find derivations"
+galloitalici.kb.derivation.sumbmit=Find derivations
 galloitalici.kb.derivation.found=Derivations
 
