--- a/webapp/src/main/resources/messages_it.properties
+++ b/webapp/src/main/resources/messages_it.properties
@@ -19,10 +19,10 @@ galloitalici.kb.lexica.selection.features.northern=tratti settentrionali
 galloitalici.kb.lexica.selection.features.southern=tratti meridionali
 galloitalici.kb.lexica.selection.sumbmit=Seleziona
 galloitalici.kb.lexica.selection.numentries=Trovati {0} elementi
-galloitalici.kb.derivation.title=Derive using Gallo-Sicilian Features
+galloitalici.kb.derivation.title=Derivazioni attraverso i tratti Gallo-Siciliani
 galloitalici.kb.derivation.lemma=Lemma
 galloitalici.kb.derivation.etymon=Etimo
-galloitalici.kb.derivation.sumbmit=trova derivazioni
+galloitalici.kb.derivation.sumbmit=Trova derivazioni
 galloitalici.kb.derivation.found=Derivazioni
 
 
