missing label for sparql submit button #42

--- a/webapp/src/main/resources/messages.properties
+++ b/webapp/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 galloitailici.kb.title=The Galloitalici Project Knowledge Base
 galloitailici.kb.sparql.title=A SPARQL endpoint for the Galloitalici Project Knowledge Base
 galloitailici.kb.sparql.querylabel=Write your SPARQL query in the below box and then press sumbit
+galloitailici.kb.sparql.submitlabel=Submit
 galloitailici.kb.sparql.error=Unable to perform the query. Errore {0}
 galloitailici.kb.lexica.pos.noun=noun
 galloitailici.kb.lexica.pos.verb=verb
