Link to project home #53

--- a/webapp/src/main/resources/messages.properties
+++ b/webapp/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-galloitailici.kb.title=The Galloitalici Project Knowledge Base
+galloitailici.kb.title=Gallo-Siciliani Initiative
 galloitailici.kb.sparql.title=A SPARQL endpoint for the Galloitalici Project Knowledge Base
 galloitailici.kb.sparql.querylabel=Write your SPARQL query in the below box and then press sumbit
 galloitailici.kb.sparql.submitlabel=Submit
