--- a/webapp/src/main/resources/messages_it.properties
+++ b/webapp/src/main/resources/messages_it.properties
@@ -1,4 +1,4 @@
-galloitailici.kb.title=Base di conoscenza del progetto Galloitalici
+galloitailici.kb.title=Gallo-Siciliani Initiative
 galloitailici.kb.sparql.title=Endpoint SPARQL per la base di conoscenza del progetto Galloitalici
 galloitailici.kb.sparql.querylabel=Inserisci la query SPARQL nel box sottostante
 galloitailici.kb.sparql.submitlabel=Invia
