Additional link to download ontologies in ttl #57

--- a/webapp/src/main/resources/messages.properties
+++ b/webapp/src/main/resources/messages.properties
@@ -24,4 +24,4 @@ galloitalici.kb.derivation.lemma=Lemma
 galloitalici.kb.derivation.etymon=Etymon
 galloitalici.kb.derivation.sumbmit=Find derivations
 galloitalici.kb.derivation.found=Derivations
-
+galloitalici.kb.ttl=Download in Turtle Format
