--- a/webapp/src/main/resources/messages_it.properties
+++ b/webapp/src/main/resources/messages_it.properties
@@ -24,5 +24,6 @@ galloitalici.kb.derivation.lemma=Lemma
 galloitalici.kb.derivation.etymon=Etimo
 galloitalici.kb.derivation.sumbmit=Trova derivazioni
 galloitalici.kb.derivation.found=Derivazioni
+galloitalici.kb.ttl=Scarica in formato Turtle
 
 
